--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -128,3 +128,25 @@ androidDynamicFeature = { id = "com.android.dynamic-feature", version.ref = "agp
 mapsplatform-secrets-plugin = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "secretsPlugin"}
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin"}
 runbuddy-android-application = { id = "runbuddy.android.application", version = "unspecified"}
+runbuddy-android-application-compose = { id = "runbuddy.android.application.compose", version = "unspecified"}
+runbuddy-android-library = { id = "runbuddy.android.library", version = "unspecified"}
+runbuddy-android-library-compose = { id = "runbuddy.android.library.compose", version = "unspecified"}
+runbuddy-android-feature-ui = { id = "runbuddy.android.feature.ui", version = "unspecified"}
+
+
+
+[bundles]
+compose = [
+    "androidx-activity-compose",
+    "androidx-lifecycle-runtime-compose",
+    "androidx-lifecycle-viewmodel-compose",
+    "androidx-compose-material3",
+    "androidx-compose-ui",
+    "androidx-compose-ui-graphics",
+    "androidx-compose-ui-tooling-preview"
+]
+compose-debug = ["androidx-compose-ui-tooling", "androidx-compose-ui-test-manifest"]
+koin = ["koin-core", "koin-android", "koin-android-workmanager"]
+koin-compose = ["koin-core", "koin-android", "koin-android-workmanager", "koin-androidx-compose"]
+
+
