--- a/run/presentation/src/main/AndroidManifest.xml
+++ b/run/presentation/src/main/AndroidManifest.xml
@@ -10,6 +10,6 @@
     <application>
 
         <meta-data android:name="com.google.android.geo.API_KEY" android:value="${MAPS_API_KEY}"/>
-        <service android:name=".active_run.service.ActiveRunService" android:foregroundServiceType="location"/>
+        <service android:name="app.core.notification.service.ActiveRunService" android:foregroundServiceType="location"/>
     </application>
 </manifest>
